compiler/testData/diagnostics/tests/kt55181.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL

fun main() {
  throw <!TYPE_MISMATCH!>"str"<!>
}
